<resources>
    <string name="app_name">IceCreamDorfner</string>
    <string name="action_settings">Settings</string>
    <string name="peanuts">Peanuts</string>
    <string name="almonds">Almonds</string>
    <string name="strawberries">Strawberries</string>
    <string name="gummy_bears">Gummy Bears</string>
    <string name="m_ms"><![CDATA[M&Ms]]></string>
    <string name="brownies">Brownies</string>
    <string name="oreos">Oreos</string>
    <string name="marshmallows">Marshmallows</string>
    <string name="hot_fudge">Hot Fudge</string>
    <string name="oz">oz</string>
    <string name="price">Price</string>
    <string name="ounces">ounces</string>
    <string name="the_works">The Works!</string>
    <string name="order">Order</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="order_history">Order History</string>
    <string-array name="flavor_items">
        <item>Vanilla</item>
        <item>Chocolate</item>
        <item>Strawberry</item>
    </string-array>
    <string-array name="size_items">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>
